# eProbe

./: .gitignore  Access_Probes_By_GC_Tm.py  Assess_By_Missing.py  CALL_CHAIN_VERIFICATION.md  Filter_Probes_By_Tags.py  Get_Accessible_SNPs.py  Get_Probes_Seq.py  Get_Tag_DUST.py  Get_Tag_Dimer.py  Get_Tag_GC_Tm.py  Get_Tag_Hairpin.py  Get_Tag_Taxid.py  Merge_Tags.py  OPTIMIZATIONS.md  Probes_to_VCF.py  README.md  SNP_assessor.py  SNP_filter.py  SNP_generator.py  SNP_preprocessor.py  SNP_subsampler.py  Select_Probes_By_Tags.py  compare_dimer_methods.py  demo_rc_kmer_dimer.py  eProbe_SNP_evaluator.py  eProbe_SNP_filter.py  eProbe_SNP_generator.py  eProbe_SNP_preprocessor.py  eProbe_SNP_subsampler.py  probe_A2  pyproject.toml  setup.py  test_bed_modes.sh  test_dimer_constant.py  test_dimer_constant_v2.py  test_hairpin_exp.py  test_server.sh  test_sfs_plot.py  test_smart_dimer.py
eModules/: Accessibility_filter_multiprocessing.py  Assess_by_distance.py  Assess_by_missing.py  BED_SNPs_filter.py  Background_probe_filter.py  Draw_dist_from_df.py  Get_allele_from_vcf.py  Get_probe_from_allele.py  Get_probe_from_seq.py  Get_probes_from_SNPs.py  Get_seq_from_lca.py  Get_snp_from_vcf.py  Get_tag_DUST.py  Get_tag_Tm.py  Get_tag_dimer.py  Get_tag_hairpin.py  Get_tag_tm.py  Merge_Tags.py  SNPs_selector.py  Snp_filter_ac.py  Snp_filter_ac_multiprocessing.py  Snp_filter_bg.py  Snp_filter_cluster.py  Snp_filter_tx.py  Snp_selector.py  Tags_filter.py  Tags_merger.py  fasta_operator.py  pipe_controler.py
eProbe.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
legacy/: Seq_generator.py
legacy/eModules/: Get_probe_from_allele.py  Get_probe_from_bed.py  Get_probe_from_snp.py  Get_tag_complexity.py  Get_tag_gc.py  Get_vcf_from_snp.py  Snp_filter_bed.py  Snp_subsampler.py  Tags_filter.py  pipe_controler.py
scripts/: benchmark_biophysics.py
test_data/: README.md  test.allele.fasta  test.exon.bed  test.feature.bed  test.gene.fasta  test.genome.fasta  test.keep.bed  test.remove.bed  test.snps.tsv
tests/: __init__.py  conftest.py  test_biophysics.py  test_biophysics_fast.py  test_biophysics_stepwise.py  test_core_fasta.py  test_core_models.py  test_core_result.py  test_fast_biophysics.py  test_filter_biophysical.py  test_funcgen.py  test_integration.py  test_popgen.py  test_select.py  test_thermo_entropy.py  test_util.py
(+118 files in other folders)
