[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eprobe"
version = "1.0.0"
description = "A one-stop capture probe design toolkit for genetic diversity reconstructions from ancient environmental DNA"
readme = "README.md"
license = {text = "CC-BY-NC-4.0"}
authors = [
    {name = "Zi-Hao Huang", email = "zh384@cam.ac.uk"}
]
maintainers = [
    {name = "Zi-Hao Huang", email = "zh384@cam.ac.uk"}
]
keywords = [
    "bioinformatics",
    "probe design",
    "ancient DNA",
    "environmental DNA",
    "population genetics",
    "capture sequencing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "biopython>=1.81",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "cyvcf2>=0.30.0",
    "pybedtools>=0.9.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
plot = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "fastcluster>=1.2.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
all = [
    "eprobe[plot,dev]",
]

[project.urls]
Homepage = "https://github.com/YCWangLab/eProbe"
Documentation = "https://github.com/YCWangLab/eProbe#readme"
Repository = "https://github.com/YCWangLab/eProbe"
Issues = "https://github.com/YCWangLab/eProbe/issues"

[project.scripts]
eprobe = "eprobe.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
